# mcp.science

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/codex/home/: config.toml
.github/codex/labels/: codex-attempt.md  codex-review.md  codex-triage.md
.github/workflows/: codex.yml  deploy-pages.yml  deploy_image.yml  semantic-release.yml
docs/: how-to-build-your-own-mcp-server-step-by-step.md  integrate-mcp-server-hand-over-hand.md  integrate-mcp-server-step-by-step.md
servers/example-server/: pyproject.toml
servers/example-server/src/example_server/: __init__.py
servers/fetch/: README.md
servers/fetch/src/mcp_web_fetch/: __init__.py  fetch.py
servers/gpaw-computation/: README.md
servers/gpaw-computation/server_package/gpaw_computation_server/gpaw_utils/: lib.py
servers/gpaw-computation/src/gpaw_computation/: server.py
servers/jupyter-act/: manifest.json
servers/materials-project/: README.md  manifest.json
servers/materials-project/src/materials_project/: data_class.py  server.py
servers/materials_project/: README.md  pyproject.toml
servers/materials_project/src/mcp_materials_project/: server.py
servers/mathematica-check/: README.md  pyproject.toml  setup.py
servers/mathematica-check/src/: __init__.py  server.py
servers/nemad/: manifest.json
servers/python-code-execution/: pyproject.toml
servers/python-code-execution/src/python_code_execution/: local_python_executor.py  safe_execute.py  schemas.py  server.py
servers/python_code_execution/: README.md  pyproject.toml
servers/python_code_execution/src/mcp_python_code_execution/: __init__ .py  local_python_executor.py  schemas.py
servers/python_code_execution/src/python_code_execution/: __init__.py  safe_execute.py  server.py
servers/ssh-exec/: README.md  manifest.json
servers/ssh-exec/src/ssh_exec/: server.py
servers/tinydb/: pyproject.toml
servers/tinydb-server/: pyproject.toml
servers/txyz-search/src/txyz_search/: server.py
servers/web-fetch/: pyproject.toml
servers/web-fetch/src/web_fetch/: __init__.py  fetch.py  utils.py
src/fetch/: pyproject.toml
src/fetch/mcp_web_fetch/: fetch.py
src/fetch/src/mcp_web_fetch/: __init__.py  utils.py
src/mcp_science/: __init__.py
src/mcp_servers/: __init__.py
src/ssh-exec/: README.md  pyproject.toml
src/ssh-exec/src/mcp_ssh_exec/: __init__.py  server.py  ssh_client.py  ssh_exec.py  utils.py
src/txyz-search/: README.md  pyproject.toml
src/txyz-search/mcp_txyz_search/: server.py  tools.py
