[project]
name = "mcp-servers"
version = "0.1.0"
description = "Open Source MCP Servers for Scientific Research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
mcp-servers = "mcp_servers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
