[project]
name = "mcp.science"
version = "0.1.3"
description = "Open Source MCP Servers for Scientific Research"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.2.1",
]

[project.scripts]
mcp-science = "mcp_science:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
