[project]
name = "mcp_materials_project"
version = "0.1.0"
description = "Materials Project MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.24.0",
    "crystal-toolkit==2025.1.24rc0",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "mp-api>=0.45.3",
    "pymatgen>=2025.3.10",
]

[project.scripts]
mcp-materials-project = "mcp_materials_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_materials_project"]
