[project]
name = "python-code-execution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rong-xyz", email = "rong@pathintegral.xyz" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
    "numpy>=2.2.4",
]

[project.scripts]
mcp-python-code-execution = "python_code_execution:main"
safe-execute = "python_code_execution.safe_execute:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
