[project]
name = "python_code_execution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "rong-xyz", email = "rong@pathintegral.xyz" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
python-code-execution = "python_code_execution:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_code_execution"]
