[project]
name = "web-fetch"
version = "0.1.0"
description = "Fetch data from ANY website"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "httpx>=0.28.1",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.5.0",
    "pymupdf>=1.25.4",
    "pypdf2>=3.0.1",
    "readabilipy>=0.3.0",
]


[project.scripts]
mcp-web-fetch = "web_fetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
